Fix help component z-index

--- a/client/src/app/shared/shared-main/misc/help.component.scss
+++ b/client/src/app/shared/shared-main/misc/help.component.scss
@@ -19,7 +19,6 @@
 
 ::ng-deep {
   .help-popover {
-    z-index: z(help-popover) !important;
     max-width: 300px;
 
     .popover-body {
